# rdb-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  test
.github/: CODEOWNERS
.github/workflows/: Python-CI.yaml  ci.yaml
docs/: Makefile  RDB_File_Format.md  RDB_Version_History.md  file_format.html  index.html  style.css  tmpl.html
src/: constants.rs  filter.rs  formatter.rs  helper.rs  iterator_type.rs  json_formatter.rs  lib.rs  macros.rs  main.rs  nil_formatter.rs  parser.rs  plain_formatter.rs  protocol_formatter.rs  types.rs
src/decoder/: hash.rs  list.rs  mod.rs  rdb.rs  set.rs  sorted_set.rs
src/decoder/common/: listpack.rs  utils.rs  ziplist.rs
src/formatter/: hexkeys.rs  json.rs  mod.rs  nil.rs  plain.rs  protocol.rs
src/parser/: hash.rs  list.rs  mod.rs  rdb.rs  set.rs  sorted_set.rs  utils.rs  value.rs
src/parser/common/: listpack.rs  mod.rs  utils.rs  ziplist.rs
src/tests/integration/dumps/json/: keys_with_expiry.json  sorted_set_as_ziplist.json  ziplist_that_doesnt_compress.json  zipmap_with_big_values.json
tests/: dump-tests.sh  eq-tests.sh  format_file_tests.rs  integration_test.rs  integration_tests.rs  lib.rs  mod.rs  redis_protocol_tests.rs
tests/dumps/: README.md  hash_list_pack.rdb  multidb-skipping.rdb  quicklist_with_multiple_nodes.rdb  quicklist_with_one_node.rdb  sorted_set_as_ziplist.rdb
tests/dumps/json/: dictionary.json  easily_compressible_string_key.json  hash_as_ziplist.json  hash_list_pack.json  integer_keys.json  intset_16.json  intset_32.json  intset_64.json  linkedlist.json  multiple_databases.json  parser_filters.json  quicklist_with_multiple_nodes.json  rdb_version_5_with_checksum.json  regular_set.json  regular_sorted_set.json  sorted_set_as_ziplist.json  uncompressible_string_keys.json  ziplist_that_compresses_easily.json  ziplist_with_integers.json  zipmap_that_doesnt_compress.json
tests/dumps/plain/: dictionary.plain  easily_compressible_string_key.plain  hash_as_ziplist.plain  hash_list_pack.plain  integer_keys.plain  intset_16.plain  intset_32.plain  intset_64.plain  keys_with_expiry.plain  linkedlist.plain  multidb-skipping.plain  multiple_databases.plain  parser_filters.plain  quicklist_with_multiple_nodes.plain  quicklist_with_one_node.plain  rdb_version_5_with_checksum.plain  regular_set.plain  regular_sorted_set.plain  sorted_set_as_ziplist.plain  uncompressible_string_keys.plain  ziplist_that_compresses_easily.plain  ziplist_that_doesnt_compress.plain  ziplist_with_integers.plain  zipmap_that_doesnt_compress.plain  zipmap_with_big_values.plain
tests/dumps/protocol/: dictionary.protocol  easily_compressible_string_key.protocol  hash_list_pack.protocol  integer_keys.protocol  intset_16.protocol  intset_32.protocol  intset_64.protocol  keys_with_expiry.protocol  linkedlist.protocol  multidb-skipping.protocol  multiple_databases.protocol  parser_filters.protocol  quicklist_with_multiple_nodes.protocol  rdb_version_5_with_checksum.protocol  regular_sorted_set.protocol  sorted_set_as_ziplist.protocol  uncompressible_string_keys.protocol  ziplist_that_compresses_easily.protocol  ziplist_that_doesnt_compress.protocol  ziplist_with_integers.protocol  zipmap_that_compresses_easily.protocol  zipmap_that_doesnt_compress.protocol  zipmap_with_big_values.protocol
utils/: PKGBUILD
www/: Makefile  file_format.html  footer.html  header.html  index.html  index.md  style.css  tmpl.html  version_history.html
