[package]
name = "rdb"
edition = "2021"
version = "0.3.0"
authors = ["Jan-Erik Rediger <badboy@fnordig.de>", "Tim Bauer <timderbauer@gmail.com>"]
keywords = ["redis", "database", "rdb", "parser"]
description = "Fast and efficient RDB parsing utility"
readme = "README.md"
license = "MIT"
homepage = "http://rdb.fnordig.de/"
documentation = "http://rdb.fnordig.de/doc/rdb/"
repository = "https://github.com/badboy/rdb-rs"

include = [
  "Cargo.toml",
  "README*",
  "LICENSE*",
  "src/**/*",
  "tests/**/*",
  "examples/**/*",
]

[[bin]]
name = "rdb"
path = "src/main.rs"
doc  = false

[dependencies]
lzf = "0.3"
getopts = "0.2"
rustc-serialize = "0.3"
regex = "0.1"
byteorder = "0.5"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
indexmap = "2.7.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.23.0"
